--- a/OnlineShop_8_11_2020/OnlineShop/Areas/Admin/Views/Shared/_SideBar.cshtml
+++ b/OnlineShop_8_11_2020/OnlineShop/Areas/Admin/Views/Shared/_SideBar.cshtml
@@ -65,7 +65,7 @@
     <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseFour"
            aria-expanded="true" aria-controls="collapsePages">
-            <i class="fas fa-fw fa-folder"></i>
+            <i class="fas fa-fw fa-table"></i>
             <span>Sản phẩm</span>
         </a>
         <div id="collapseFour" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
@@ -93,6 +93,29 @@
                 <a class="collapse-item" href="#">Menu</a>
                 <a class="collapse-item" href="#">Slide</a>
                 <a class="collapse-item" href="/Admin/Footer/Index">Footer</a>
+            </div>
+        </div>
+    </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider">
+
+    <!-- Nav Item - Collapse Menu - Thống kê -->
+    <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSix"
+           aria-expanded="true" aria-controls="collapsePages">
+            <i class="fas fa-fw fa-chart-area"></i>
+            <span>Thống kê</span>
+        </a>
+        <div id="collapseSix" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+            <div class="bg-white py-2 collapse-inner rounded">
+                <a class="collapse-item" href="/Admin/Chart/Index">Thống kê</a>
+                <a class="collapse-item" href="/Admin/Chart/ThongKeThuNhapTrongThang">Thu nhập tháng này</a>
+                <a class="collapse-item" href="/Admin/Chart/ThongKeThuNhapLastNdays">Thu nhập N ngày trước</a>
+                <a class="collapse-item" href="/Admin/Chart/ThongKeTongSoSanPham">Tổng số sản phẩm</a>
+                <a class="collapse-item" href="/Admin/Chart/ThongKeSoSanPhamBanDuoc">Số sản phẩm bán được</a>
+                <a class="collapse-item" href="/Admin/Chart/ThongKeThuNhapTheoDanhMuc">Thu nhập theo danh mục</a>
+                <a class="collapse-item" href="/Admin/Chart/ThongKeTongGiaTriTheoDanhMuc">Tổng giá trị theo danh mục</a>
             </div>
         </div>
     </li>
