cookie httpOnly + samesite flag
fix loi cua 2 cookie + cfrs lien he

--- a/OnlineShop_8_11_2020/OnlineShop/Views/Contact/Index.cshtml
+++ b/OnlineShop_8_11_2020/OnlineShop/Views/Contact/Index.cshtml
@@ -69,6 +69,7 @@ else
                     <br />
                     <h2>Gửi thông tin</h2>
                     <form>
+                        @Html.AntiForgeryToken()
                         <div class="form-group">
                             <label>Họ tên</label>
                             <input type="text" id="txtName" class="form-control" />
