fix 6 lỗi + sửa method cho liên hệ với search

--- a/OnlineShop_8_11_2020/OnlineShop/Views/Shared/_Layout.cshtml
+++ b/OnlineShop_8_11_2020/OnlineShop/Views/Shared/_Layout.cshtml
@@ -89,7 +89,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 @{Html.RenderAction("MainMenu", "Home");}
                 <!--Search box-->
                 <div class="search_box">
-                    <form action="/tim-kiem/page=1" method="get">
+                    <form action="/tim-kiem/page=1" method="post">
                         @Html.AntiForgeryToken()
                         <input type="text" id="txtKeyword" name="keyword" placeholder="Gõ từ khóa"><input type="submit" value="">
                     </form>
